<resources>
    <string name="app_name">GameServiceAchievements</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="play_button">Play Button</string>
    <string name="last_score">Last Score:</string>
    <string name="_0">0</string>
    <string name="abuttontext">A)</string>
    <string name="bbuttontext">B)</string>
    <string name="cbuttonText">C)</string>
    <string name="dbuttontext">D)</string>
    <string name="questiontext">Q:</string>
    <string name="scoretext">Score:</string>
    <string name="zeroScore">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="achievements">Achievements</string>
    <string name="you_have_logged_in_as">You have logged in as:</string>
    <string name="achievement_image">Achievement Image</string>
    <string name="hidden">Hidden</string>
    <string name="unlocked">Unlocked</string>
    <string name="steps">Steps:</string>
    <string name="main_menu">Main Menu</string>
    <string name="highest_score">Highest Score:</string>
    <string name="done">Done</string>
    <string name="you_have_completed_the_quiz">You have completed the quiz.</string>
    <string name="yes">Yes</string>
</resources>