<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.quiz.QuizFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.codelabs.gameservices.huawei.ui.main.quiz.QuizViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/abuttontext"
                android:onClick="@{viewmodel.chooseA}"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/answerAtext"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewmodel.questionObject.a1}" />

            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/bbuttontext"
                android:onClick="@{viewmodel.chooseB}"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/answerBtext"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewmodel.questionObject.a2}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="300dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/cbuttonText"
                android:onClick="@{viewmodel.chooseC}"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/answerCtext"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewmodel.questionObject.a3}" />

            <Button
                android:id="@+id/button4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/dbuttontext"
                android:onClick="@{viewmodel.chooseD}"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/answerDtext"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewmodel.questionObject.a4}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:text="@string/questiontext"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewmodel.questionObject.question}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoretext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewmodel.score)}" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>